--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -236,6 +236,9 @@ jobs:
         if: steps.wiki-checkout.outcome == 'failure'
         run: |
           echo "Wiki repository doesn't exist, creating it..."
+
+          # Clean up any existing wiki directory
+          rm -rf wiki
           mkdir -p wiki
           cd wiki
 
@@ -260,9 +263,34 @@ jobs:
           git commit -m "Initialize wiki"
 
           # Add remote and push (this will create the wiki repository)
-          git remote add origin https://${{ secrets.WIKI_PAT }}@github.com/${{ github.repository }}.wiki.git
+          # Use || true to ignore error if remote already exists
+          git remote add origin https://${{ secrets.WIKI_PAT }}@github.com/${{ github.repository }}.wiki.git || true
           git branch -M main
           git push -u origin main
+
+      - name: Ensure Wiki Directory
+        run: |
+          # If wiki directory doesn't exist at this point, something went wrong
+          if [ ! -d wiki ]; then
+            echo "Error: Wiki directory not found after checkout/creation"
+            echo "Attempting to checkout wiki again..."
+            
+            # Try to checkout the wiki repository again
+            git clone https://${{ secrets.WIKI_PAT }}@github.com/${{ github.repository }}.wiki.git wiki || {
+              echo "Failed to clone wiki, creating minimal structure..."
+              mkdir -p wiki
+              cd wiki
+              git init
+              git config user.name "github-actions[bot]"
+              git config user.email "github-actions[bot]@users.noreply.github.com"
+              echo "# F1 Strategy Manager Wiki" > Home.md
+              git add .
+              git commit -m "Initialize wiki" || true
+            }
+          fi
+
+          echo "Wiki directory status:"
+          ls -la wiki/ || echo "Wiki directory is empty or doesn't exist"
 
       - name: Copy to Wiki
         run: |
