--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -245,6 +245,43 @@ jobs:
               
               return content
 
+          def add_placeholder_diagrams(content):
+              """Add placeholder diagrams where images should be"""
+              
+              # Dictionary of common diagram placeholders based on context
+              diagram_patterns = {
+                  r'(The F1 Strategy Manager.*?system is organized into.*?interconnected.*?layers.*?)\n\n': 
+                      r'\1\n\n```mermaid\ngraph TB\n    A[Data Sources] --> B[Processing Layer]\n    B --> C[Analysis Layer]\n    C --> D[Strategy Engine]\n    D --> E[User Interface]\n    \n    A1[FastF1 Telemetry] --> A\n    A2[OpenF1 Radio] --> A\n    A3[Video Feed] --> A\n    \n    B1[Data Processing] --> B\n    B2[Feature Engineering] --> B\n    \n    C1[ML Models] --> C\n    C2[Computer Vision] --> C\n    C3[NLP Pipeline] --> C\n    \n    D1[Expert System] --> D\n    D2[Rule Engine] --> D\n    \n    E1[Streamlit Dashboard] --> E\n    E2[Strategy Views] --> E\n```\n\n',
+                  
+                  r'(.*?system architecture.*?components.*?)\n\n':
+                      r'\1\n\n```mermaid\nflowchart LR\n    subgraph "Data Layer"\n        A[Telemetry Data]\n        B[Radio Data]\n        C[Video Data]\n    end\n    \n    subgraph "Processing Layer"\n        D[Data Processing]\n        E[Feature Engineering]\n    end\n    \n    subgraph "Analysis Layer"\n        F[ML Models]\n        G[Computer Vision]\n        H[NLP Pipeline]\n    end\n    \n    subgraph "Strategy Layer"\n        I[Expert System]\n        J[Rule Engine]\n    end\n    \n    subgraph "UI Layer"\n        K[Streamlit Dashboard]\n    end\n    \n    A --> D\n    B --> D\n    C --> D\n    D --> E\n    E --> F\n    E --> G\n    E --> H\n    F --> I\n    G --> I\n    H --> I\n    I --> J\n    J --> K\n```\n\n',
+                  
+                  r'(.*?data flow.*?through.*?system.*?)\n\n':
+                      r'\1\n\n```mermaid\nsequenceDiagram\n    participant U as User\n    participant UI as Streamlit UI\n    participant P as Processing\n    participant ML as ML Models\n    participant ES as Expert System\n    participant D as Data Sources\n    \n    U->>UI: Request Analysis\n    UI->>P: Process Data Request\n    P->>D: Fetch Raw Data\n    D-->>P: Return Data\n    P->>ML: Run Predictions\n    ML-->>P: Return Predictions\n    P->>ES: Apply Rules\n    ES-->>P: Return Recommendations\n    P-->>UI: Processed Results\n    UI-->>U: Display Analysis\n```\n\n',
+                  
+                  r'(.*?machine learning.*?pipeline.*?)\n\n':
+                      r'\1\n\n```mermaid\ngraph TD\n    A[Raw Telemetry] --> B[Data Preprocessing]\n    B --> C[Feature Engineering]\n    C --> D[Model Training]\n    D --> E[Model Validation]\n    E --> F[Prediction Engine]\n    \n    G[XGBoost Model] --> F\n    H[TCN Model] --> F\n    I[Vision Model] --> F\n    \n    F --> J[Strategy Recommendations]\n```\n\n',
+                  
+                  r'(.*?expert system.*?rules.*?)\n\n':
+                      r'\1\n\n```mermaid\nflowchart TB\n    A[Race Data Input] --> B{Analyze Conditions}\n    B --> C[Tire Degradation Rules]\n    B --> D[Gap Analysis Rules]\n    B --> E[Radio Message Rules]\n    \n    C --> F[Degradation Assessment]\n    D --> G[Position Analysis]\n    E --> H[Communication Insights]\n    \n    F --> I[Strategy Engine]\n    G --> I\n    H --> I\n    \n    I --> J[Final Recommendations]\n```\n\n',
+                  
+                  # Detect empty spaces where diagrams should be
+                  r'(.*?following diagram.*?)\n\n\n+':
+                      r'\1\n\n```mermaid\ngraph LR\n    A[Component A] --> B[Component B]\n    B --> C[Component C]\n    C --> D[Output]\n```\n\n*(Original diagram available in [DeepWiki](https://deepwiki.com/VforVitorio/F1_Strat_Manager))*\n\n',
+                      
+                  r'(.*?diagram.*?shows.*?)\n\n\n+':
+                      r'\1\n\n```mermaid\ngraph TB\n    A[Input] --> B[Process]\n    B --> C[Output]\n```\n\n*(Diagram placeholder - see [DeepWiki](https://deepwiki.com/VforVitorio/F1_Strat_Manager) for visual representation)*\n\n',
+              }
+              
+              # Apply diagram patterns
+              for pattern, replacement in diagram_patterns.items():
+                  content = re.sub(pattern, replacement, content, flags=re.IGNORECASE | re.DOTALL)
+              
+              # Generic empty space detection
+              content = re.sub(r'\n\n\n\n+', '\n\n*(Diagram/Image placeholder - see [DeepWiki](https://deepwiki.com/VforVitorio/F1_Strat_Manager) for visual representation)*\n\n', content)
+              
+              return content
+
           def get_page_title_from_content(content):
               """Extract a clean title from content"""
               lines = content.split('\n')
@@ -310,6 +347,9 @@ jobs:
                   # Clean the content
                   cleaned_content = clean_deepwiki_content(content)
                   
+                  # Add placeholder diagrams
+                  cleaned_content = add_placeholder_diagrams(cleaned_content)
+                  
                   if len(cleaned_content.strip()) < 50:  # Skip very short content
                       print(f"Skipping short content section {i+1}")
                       continue
@@ -335,6 +375,7 @@ jobs:
               
               main_content = "# F1 Strategy Manager - Complete Documentation\n\n"
               main_content += "This document contains the complete documentation for the F1 Strategy Manager project.\n\n"
+              main_content += "> **Note**: Some diagrams are represented as Mermaid diagrams or placeholders. For the original visual representations, please visit the [DeepWiki documentation](https://deepwiki.com/VforVitorio/F1_Strat_Manager).\n\n"
               main_content += "## Table of Contents\n\n"
               
               # Add table of contents
@@ -367,6 +408,7 @@ jobs:
                   content = f.read()
               
               cleaned_content = clean_deepwiki_content(content)
+              cleaned_content = add_placeholder_diagrams(cleaned_content)
               
               if not cleaned_content.strip().startswith('# '):
                   cleaned_content = '# F1 Strategy Manager\n\n' + cleaned_content.strip()
